# api-mapping-assistant

./: .gitignore  README.md  app.py  assistant_manager.py  pyproject.toml  system-prompt.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
knowledge_base/: additional-functions.md  basic-concepts-and-terms.md  getting-started.md  introduction.md  screening-functions.md
src/frontend/: api.py  app.py  sidebar.py  state.py  utils.py
