[project]
name = "api-mapping-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph-sdk>=0.2.9",
    "openai>=1.98.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
]

[dependency-groups]
dev = [
    "pip-system-certs>=5.2",
]
